[project]
name = "blueprints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.7.4 ; python_full_version >= '3.6'",
    "charset-normalizer==3.3.2 ; python_full_version >= '3.7'",
    "discord-webhook==1.3.1 ; python_full_version >= '3.10' and python_full_version < '4.0'",
    "idna==3.7 ; python_full_version >= '3.5'",
    "imagesize==1.4.1 ; python_full_version >= '2.7'",
    "iniconfig==2.0.0 ; python_full_version >= '3.7'",
    "packaging==24.1 ; python_full_version >= '3.8'",
    "pillow==10.4.0 ; python_full_version >= '3.8'",
    "pluggy==1.5.0 ; python_full_version >= '3.8'",
    "pydantic==1.10.17 ; python_full_version >= '3.7'",
    "pytest==7.4.3 ; python_full_version >= '3.7'",
    "regex==2024.5.15 ; python_full_version >= '3.8'",
    "requests==2.32.2 ; python_full_version >= '3.8'",
    "sqlalchemy==2.0.31 ; python_full_version >= '3.7'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.8'",
    "urllib3==2.2.2 ; python_full_version >= '3.8'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
